force-app/main/default/objects/Reward__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <type>Lookup</type>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <required>true</required>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>