force-app/main/default/objects/Reward__c/fields/Points_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Points_Awarded__c</fullName>
    <label>Points Awarded</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>