force-app/main/default/objects/Reward__c/fields/Reward_Date__c.field-meta.xml
<CustomField>
    <fullName>Reward_Date__c</fullName>
    <label>Reward Date</label>
    <type>Date</type>
</CustomField>