force-app/main/default/objects/Reward__c/fields/Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>Reward_Type__c</fullName>
    <label>Reward Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Badge</fullName><default>false</default><label>Badge</label></value>
            <value><fullName>Coins</fullName><default>false</default><label>Coins</label></value>
            <value><fullName>Trophy</fullName><default>false</default><label>Trophy</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>